# SQL

Lesson2/Task1/: Script-4.sql  record_store.drawio  record_store.sql
Lesson2/Task2/: Script-2.sql
Lesson3/Task1/: Task1.sql
Lesson3/Task2/: Task2.sql
Lesson3/Task3/: Task3.sql
Lesson3/Task4/: Task4.sql
Lesson5/src/: CMakeLists.txt  input_output.cpp  input_output.h  main.cpp  methods.cpp  methods.h  queries.cpp
Lesson6/src/: CMakeLists.txt  Classes.h  main.cpp
